# sum_cols_matrix_perf

./: CMakeLists.txt  Makefile  OpenMPTimer.cpp  OpenMPTimer.h  main.cpp  matrix.cpp  matrix.hpp  matrix_template.hpp  numscale_work.ods  pthreads_routines.hpp  results_time_plot.py  time_result.txt
build_gpu/: CMakeCache.txt  Makefile  cmake_install.cmake
build_gpu/kokkos/: CTestTestfile.cmake  DartConfiguration.tcl  KokkosConfig.cmake  KokkosCore_config.h  KokkosTargets.cmake  Makefile  Makefile.kokkos  cmake_install.cmake  kokkos_generated_settings.cmake
build_gpu/kokkos/algorithms/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_gpu/kokkos/containers/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_gpu/kokkos/core/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_gpu/sources/: Makefile  cmake_install.cmake  parallel_sum_matrix_kokkos_cuda
build_openmp/: CMakeCache.txt  Makefile  cmake_install.cmake
build_openmp/kokkos/: CTestTestfile.cmake  DartConfiguration.tcl  KokkosConfig.cmake  KokkosCore_config.h  KokkosCore_config.tmp  KokkosTargets.cmake  Makefile  Makefile.kokkos  cmake_install.cmake  kokkos_generated_settings.cmake
build_openmp/kokkos/algorithms/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_openmp/kokkos/containers/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_openmp/kokkos/core/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_openmp/sources/: Makefile  cmake_install.cmake  parallel_sum_matrix_kokkos_openmp  test.txt
cmake/: buildExternal_Kokkos.cmake  cmake_install.cmake
sources/: CMakeLists.txt  CudaTimer.h  OpenMPTimer.cpp  OpenMPTimer.h  kokkos_functor.h  kokkos_shared.h  main.cpp  matrix_template.hpp
